fixed bug of cover art not showing, and added styling to add/remove button

--- a/public/style.css
+++ b/public/style.css
@@ -112,6 +112,12 @@ nav ul li a.active {
     font-weight: bold;
 }
 
+.button:hover{
+    background-color: #3949ab;
+    color: #e2e2e2;
+    border: 2px solid #3949ab;
+}
+
 .signup {
     background-color: #222d3b;
     border: 2px solid #5c6bc0;
